// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/basic/alert/demo/basic.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-alert dcloud-alert-success dcloud-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        Success Text
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/alert/demo/closable.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-alert dcloud-alert-warning dcloud-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        Warning Text Warning Text Warning TextW arning Text Warning Text Warning TextWarning Text
      </div>
    </div>
    <button
      class="dcloud-alert-close-icon"
      tabindex="0"
      type="button"
    >
      <span
        aria-label="close"
        class="anticon anticon-close"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
          />
        </svg>
      </span>
    </button>
  </div>,
  "1": <div
    class="dcloud-alert dcloud-alert-error dcloud-alert-with-description dcloud-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        Error Text
      </div>
      <div
        class="dcloud-alert-description"
      >
        Error Description Error Description Error Description Error Description Error Description Error Description
      </div>
    </div>
    <button
      class="dcloud-alert-close-icon"
      tabindex="0"
      type="button"
    >
      <span
        aria-label="close"
        class="anticon anticon-close"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
          />
        </svg>
      </span>
    </button>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 2,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/alert/demo/close-text.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-alert dcloud-alert-info dcloud-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        Info Text
      </div>
    </div>
    <button
      class="dcloud-alert-close-icon"
      tabindex="0"
      type="button"
    >
      <span
        class="dcloud-alert-close-text"
      >
        Close Now
      </span>
    </button>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/alert/demo/custom-icon.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-alert dcloud-alert-success dcloud-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        showIcon = false
      </div>
    </div>
  </div>,
  "1": <div
    class="dcloud-alert dcloud-alert-success"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="smile"
      class="anticon anticon-smile dcloud-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="smile"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
        />
      </svg>
    </span>
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        Success Tips
      </div>
    </div>
  </div>,
  "2": <div
    class="dcloud-alert dcloud-alert-info"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="smile"
      class="anticon anticon-smile dcloud-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="smile"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
        />
      </svg>
    </span>
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        Informational Notes
      </div>
    </div>
  </div>,
  "3": <div
    class="dcloud-alert dcloud-alert-warning"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="smile"
      class="anticon anticon-smile dcloud-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="smile"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
        />
      </svg>
    </span>
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        Warning
      </div>
    </div>
  </div>,
  "4": <div
    class="dcloud-alert dcloud-alert-error"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="smile"
      class="anticon anticon-smile dcloud-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="smile"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
        />
      </svg>
    </span>
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        Error
      </div>
    </div>
  </div>,
  "5": <div
    class="dcloud-alert dcloud-alert-success dcloud-alert-with-description"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="smile"
      class="anticon anticon-smile dcloud-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="smile"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
        />
      </svg>
    </span>
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        Success Tips
      </div>
      <div
        class="dcloud-alert-description"
      >
        Detailed description and advices about successful copywriting.
      </div>
    </div>
  </div>,
  "6": <div
    class="dcloud-alert dcloud-alert-info dcloud-alert-with-description"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="smile"
      class="anticon anticon-smile dcloud-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="smile"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
        />
      </svg>
    </span>
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        Informational Notes
      </div>
      <div
        class="dcloud-alert-description"
      >
        Additional description and informations about copywriting.
      </div>
    </div>
  </div>,
  "7": <div
    class="dcloud-alert dcloud-alert-warning dcloud-alert-with-description"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="smile"
      class="anticon anticon-smile dcloud-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="smile"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
        />
      </svg>
    </span>
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        Warning
      </div>
      <div
        class="dcloud-alert-description"
      >
        This is a warning notice about copywriting.
      </div>
    </div>
  </div>,
  "8": <div
    class="dcloud-alert dcloud-alert-error dcloud-alert-with-description"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="smile"
      class="anticon anticon-smile dcloud-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="smile"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
        />
      </svg>
    </span>
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        Error
      </div>
      <div
        class="dcloud-alert-description"
      >
        This is an error message about copywriting.
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 9,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/alert/demo/description.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-alert dcloud-alert-success dcloud-alert-with-description dcloud-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        Success Text
      </div>
      <div
        class="dcloud-alert-description"
      >
        Success Description Success Description Success Description
      </div>
    </div>
  </div>,
  "1": <div
    class="dcloud-alert dcloud-alert-info dcloud-alert-with-description dcloud-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        Info Text
      </div>
      <div
        class="dcloud-alert-description"
      >
        Info Description Info Description Info Description Info Description
      </div>
    </div>
  </div>,
  "2": <div
    class="dcloud-alert dcloud-alert-warning dcloud-alert-with-description dcloud-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        Warning Text
      </div>
      <div
        class="dcloud-alert-description"
      >
        Warning Description Warning Description Warning Description Warning Description
      </div>
    </div>
  </div>,
  "3": <div
    class="dcloud-alert dcloud-alert-error dcloud-alert-with-description dcloud-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        Error Text
      </div>
      <div
        class="dcloud-alert-description"
      >
        Error Description Error Description Error Description Error Description
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 4,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/alert/demo/error-boundary.md correctly 1`] = `
LoadedCheerio {
  "0": <button
    class="dcloud-btn dcloud-btn-dangerous"
    type="button"
  >
    <span>
      Click me to throw a error
    </span>
  </button>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/alert/demo/link.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-alert dcloud-alert-success dcloud-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        <span>
          Success Text with 
          <a
            class="alert-link"
          >
            an example link
          </a>
          , and more...
        </span>
      </div>
    </div>
  </div>,
  "1": <div
    class="dcloud-alert dcloud-alert-info dcloud-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        <span>
          Info Text with 
          <a
            class="alert-link"
          >
            an example link
          </a>
          , and more...
        </span>
      </div>
    </div>
  </div>,
  "2": <div
    class="dcloud-alert dcloud-alert-warning dcloud-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        <span>
          Warning Text with 
          <a
            class="alert-link"
          >
            an example link
          </a>
          , and more...
        </span>
      </div>
    </div>
  </div>,
  "3": <div
    class="dcloud-alert dcloud-alert-error dcloud-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        <span>
          Error Text with 
          <a
            class="alert-link"
          >
            an example link
          </a>
          , and more...
        </span>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 4,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/alert/demo/smooth-closed.md correctly 1`] = `
LoadedCheerio {
  "0": <div>
    <div
      class="dcloud-alert dcloud-alert-success dcloud-alert-no-icon"
      data-show="true"
      role="alert"
    >
      <div
        class="dcloud-alert-content"
      >
        <div
          class="dcloud-alert-message"
        >
          Alert Message Text
        </div>
      </div>
      <button
        class="dcloud-alert-close-icon"
        tabindex="0"
        type="button"
      >
        <span
          aria-label="close"
          class="anticon anticon-close"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </button>
    </div>
    <p>
      placeholder text here
    </p>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/alert/demo/style.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-alert dcloud-alert-success dcloud-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        Success Text
      </div>
    </div>
  </div>,
  "1": <div
    class="dcloud-alert dcloud-alert-info dcloud-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        Info Text
      </div>
    </div>
  </div>,
  "2": <div
    class="dcloud-alert dcloud-alert-warning dcloud-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        Warning Text
      </div>
    </div>
  </div>,
  "3": <div
    class="dcloud-alert dcloud-alert-error dcloud-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="dcloud-alert-content"
    >
      <div
        class="dcloud-alert-message"
      >
        Error Text
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 4,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
